resources/media-store/media.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-store-browser
  labels:
    app: media-store-browser
spec:
  replicas: 3
  selector:
    matchLabels:
      app: media-store-browser
  template:
    metadata:
      labels:
        app: media-store-browser
    spec:
      containers:
        - name: media-store-browser
          image: nginx
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: store
              mountPath: /usr/share/nginx/html
      volumes:
        - name: store
          persistentVolumeClaim:
            claimName: media-store
            readOnly: false
