resources/media-store/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-store-browser
spec:
  selector:
    app: media-store-browser
  ports:
    - port: 80
      targetPort: 8001
