resources/media-store/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: media-store-browser
spec:
  rules:
    - host: media.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: media-store-browser
              servicePort: 80
